# flask_react

./: .gitignore  styles.css
backend/: README.md  app.py  config.py  models.py  pyproject.toml  users.db
backend/static/: bundle.js  index.html  styles.css
backend/utils/: database.py
frontend/: .babelrc  package-lock.json  package.json  postcss.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: BlogContent.js  DataDisplay.js  DataInput.js  Navbar.js  Sidebar.js
frontend/src/services/: api.js
frontend/src/styles/: styles.css
