[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = "test"
authors = ["qzp"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.3.2"
Flask-SQLAlchemy = "3.0.3"
PyMySQL = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


